# moba-ambilight

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  moba-ambilight
src/: Makefile.am  bankcolorvalues.cpp  bankcolorvalues.h  bridge.cpp  bridge.h  client.cpp  controller.cpp  controller.h  daemon.cpp  handler.cpp  handler.h  main.cpp  plasma.cpp  plasma.h  processdata.cpp  processdata.h  processdatahold.cpp  processdatahold.h  processdataplain.cpp  processdataplain.h  processdatawobble.cpp  processdatawobble.h  targetvalues.cpp  targetvalues.h
src/b/: bankcolorvalues.cpp  bankcolorvalues.h  bridge.cpp  handler.cpp  handler.h
